--- a/system/user/templates/default_site/default.group/index.html
+++ b/system/user/templates/default_site/default.group/index.html
@@ -1,70 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      <title>Welcome to Our Site</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
-      <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png">
-      <style type="text/css">
-         html, .font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
-         .sm:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
-         .md:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
-         .lg:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
-         .xl:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
-      </style>
-   </head>
-   <body class="">
-      {exp:channel:entries channel="page" url_title="homepage"}
-         <div class="">
-            <div class="relative bg-white overflow-hidden">
-               <div class="max-w-screen-xl mx-auto">
-                  <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-                     <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewbox="0 0 100 100" preserveaspectratio="none">
-                        <polygon points="50,0 100,0 50,100 0,100"></polygon>
-                     </svg>
-                     <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
-                        <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start">
-                           <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
-                              <div class="flex items-center justify-between w-full md:w-auto">
-                                 <a href="#" aria-label="Home"><img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-on-white.svg" alt=""></a>
-                                 <div class="-mr-2 flex items-center md:hidden">
-                                    <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" id="main-menu" type="button" aria-label="Main menu" aria-haspopup="true">
-                                       <svg class="h-6 w-6" stroke="currentColor" fill="none" viewbox="0 0 24 24">
-                                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                                       </svg>
-                                    </button>
-                                 </div>
-                              </div>
-                           </div>
-                           <div class="hidden md:block md:ml-10 md:pr-4">
-                             <a class="font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out" href="/">Home</a>
-                             <a class="ml-8 font-medium text-gray-500 hover:text-gray-900 transition duration-150 ease-in-out" href="/blog">Blog</a>
-                             <a class="ml-8 font-medium text-indigo-600 hover:text-indigo-900 transition duration-150 ease-in-out" href="/contact">Contact</a></div>
-                        </nav>
-                     </div>
-                     <div class="hidden absolute top-0 inset-x-0 p-2 transition transform origin-top-right">
-                        <div class="rounded-lg shadow-md">
-                           <div class="rounded-lg bg-white shadow-xs overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
-                              <div class="px-5 pt-4 flex items-center justify-between">
-                                 <div><img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-on-white.svg" alt=""></div>
-                                 <div class="-mr-2">
-                                    <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" type="button" aria-label="Close menu">
-                                       <svg class="h-6 w-6" stroke="currentColor" fill="none" viewbox="0 0 24 24">
-                                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                       </svg>
-                                    </button>
-                                 </div>
-                              </div>
-                              <div class="px-2 pt-2 pb-3">
-                                 <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out" href="/" role="menuitem">Home</a><a class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:text-gray-900 focus:bg-gray-50 transition duration-150 ease-in-out" href="/blog" role="menuitem">Blog</a></div>
-                              <div><a class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100 focus:text-indigo-700 transition duration-150 ease-in-out" href="/contact" role="menuitem">Contact</a></div>
-                           </div>
-                        </div>
-                     </div>
+{layout="layouts/main"}
+            {exp:channel:entries channel="page" url_title="homepage"}
                      <main class="mt-10 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                         <div class="sm:text-center lg:text-left">
                            <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
@@ -141,80 +76,3 @@
                </div>
             </div>
          </div>
-         <div class="relative bg-white">
-            <div class="absolute inset-0">
-               <div class="absolute inset-y-0 left-0 w-1/2 bg-gray-50"></div>
-            </div>
-            <div class="relative max-w-7xl mx-auto lg:grid lg:grid-cols-5">
-               <div class="bg-gray-50 py-16 px-4 sm:px-6 lg:col-span-2 lg:px-8 lg:py-24 xl:pr-12">
-                  <div class="max-w-lg mx-auto">
-                     <h2 class="text-2xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-3xl sm:leading-9">Get in touch</h2>
-                     <p class="mt-3 text-lg leading-6 text-gray-500">Let us know what you think</p>
-                     <dl class="mt-8 text-base leading-6 text-gray-500">
-                        <div>
-                           <dt class="sr-only">Postal address</dt>
-                           <dd>
-                              <p>742 Evergreen Terrace</p>
-                              <p>Springfield, OR 12345</p>
-                           </dd>
-                        </div>
-                        <div class="mt-6">
-                           <dt class="sr-only">Phone number</dt>
-                           <dd class="flex">
-                              <svg class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
-                              </svg>
-                              <span class="ml-3">+1 (555) 123-4567</span>
-                           </dd>
-                        </div>
-                        <div class="mt-3">
-                           <dt class="sr-only">Email</dt>
-                           <dd class="flex">
-                              <svg class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-                              </svg>
-                              <span class="ml-3">support@example.com</span>
-                           </dd>
-                        </div>
-                     </dl>
-                     <p class="mt-6 text-base leading-6 text-gray-500">Looking for careers? <a class="font-medium text-gray-700 underline" href="#">View all job openings</a>.</p>
-                  </div>
-               </div>
-               <div class="bg-white py-16 px-4 sm:px-6 lg:col-span-3 lg:py-24 lg:px-8 xl:pl-12">
-                  <div class="max-w-lg mx-auto lg:max-w-none">
-                     <form class="grid grid-cols-1 row-gap-6" action="#" method="POST">
-                        <div>
-                           <label class="sr-only" for="full_name">Full name</label>
-                           <div class="relative rounded-md shadow-sm">
-                              <input class="form-input block w-full py-3 px-4 placeholder-gray-500 transition ease-in-out duration-150" id="full_name" placeholder="Full name">
-                           </div>
-                        </div>
-                        <div>
-                           <label class="sr-only" for="email">Email</label>
-                           <div class="relative rounded-md shadow-sm">
-                              <input class="form-input block w-full py-3 px-4 placeholder-gray-500 transition ease-in-out duration-150" id="email" type="email" placeholder="Email">
-                           </div>
-                        </div>
-                        <div>
-                           <label class="sr-only" for="phone">Phone</label>
-                           <div class="relative rounded-md shadow-sm">
-                              <input class="form-input block w-full py-3 px-4 placeholder-gray-500 transition ease-in-out duration-150" id="phone" placeholder="Phone">
-                           </div>
-                        </div>
-                        <div>
-                           <label class="sr-only" for="message">Message</label>
-                           <div class="relative rounded-md shadow-sm"><textarea class="form-input block w-full py-3 px-4 placeholder-gray-500 transition ease-in-out duration-150" id="message" rows="4" placeholder="Message"></textarea></div>
-                        </div>
-                        <div>
-                           <span class="inline-flex rounded-md shadow-sm">
-                           <button class="inline-flex justify-center py-3 px-6 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" type="submit">Submit</button>
-                           </span>
-                        </div>
-                     </form>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </body>
-</html>
