--- a/system/user/templates/default_site/default.group/index.html
+++ b/system/user/templates/default_site/default.group/index.html
@@ -55,7 +55,8 @@
                                  <h3 class="mt-2 text-xl leading-7 font-semibold text-gray-900">
                                     {title}
                                  </h3>
-                                 <p class="mt-3 text-base leading-6 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.</p>
+                                 {!-- <p class="mt-3 text-base leading-6 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.</p> --}
+                                 <p class="mt-3 text-base leading-6 text-gray-500">{blog_content:attr_safe limit="150"}</p>
                               </a>
                            </div>
                            <div class="mt-6 flex items-center">
