--- a/system/user/templates/default_site/default.group/index.html
+++ b/system/user/templates/default_site/default.group/index.html
@@ -41,43 +41,15 @@
                <div class="mt-12 grid gap-5 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-none">
                   <!-- Blog card -->
                   {exp:channel:entries channel="blog" limit="3" dynamic="no"}
-                     <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-                        <div class="flex-shrink-0">
-                           {featured_image}
-                              <img class="h-48 w-full object-cover" src="{url}" alt="{title}" />
-                           {/featured_image}
-                        </div>
-                        <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                           <div class="flex-1">
-                              {!-- Categories --}
-                              <p class="text-sm leading-5 font-medium text-indigo-600">
-                                 {if has_categories}
-                                    {categories backspace="2"}<a class="hover:underline" href="/blog/entry/{url_title}">{category_name}</a>, {/categories}
-                                 {/if}
-                              </p>
-                              {!-- End categories --}
-                              <a class="block" href="/blog/entry/{url_title}">
-                                 <h3 class="mt-2 text-xl leading-7 font-semibold text-gray-900">
-                                    {title}
-                                 </h3>
-                                 {!-- <p class="mt-3 text-base leading-6 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.</p> --}
-                                 <p class="mt-3 text-base leading-6 text-gray-500">{blog_content:attr_safe limit="150"}</p>
-                              </a>
-                           </div>
-                           <div class="mt-6 flex items-center">
-                              <div class="flex-shrink-0">
-                                 <a href="#"><img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80" alt=""></a></div>
-                              <div class="ml-3">
-                                 <p class="text-sm leading-5 font-medium text-gray-900"><a class="hover:underline" href="#">{author}</a></p>
-                                 <div class="flex text-sm leading-5 text-gray-500">
-                                    <time datetime="{entry_date format='%Y-%m-%d'}">{entry_date format="%M %d, %Y"}</time>
-                                    <span class="mx-1">&middot;</span>
-                                    <span>6 min read</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
+                     {embed="embeds/blog-card"
+                        featured_image="{featured_image}"
+                        categories='{if has_categories}{categories backspace="2"}<a class="hover:underline" href="/blog/entry/{url_title}">{category_name}</a>, {/categories}{/if}'
+                        title="{title}"
+                        blog_content='{blog_content:attr_safe limit="150"}'
+                        author="{author}"
+                        time_date="{entry_date format='%Y-%m-%d'}"
+                        pretty_date='{entry_date format="%M %d, %Y"}'
+                     }
                   {/exp:channel:entries}
                </div>
             </div>
