--- a/system/user/templates/default_site/layouts.group/main.html
+++ b/system/user/templates/default_site/layouts.group/main.html
@@ -16,6 +16,7 @@
          .lg:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
          .xl:font-sans{font-family:"Inter var",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}
       </style>
+      {layout:head_extra}
    </head>
    <body class="">
       {!-- Let's begin our layout --}
