--- a/system/user/templates/default_site/embeds.group/blog-card.html
+++ b/system/user/templates/default_site/embeds.group/blog-card.html
@@ -9,7 +9,7 @@
             {embed:categories}
          </p>
          {!-- End categories --}
-         <a class="block" href="/blog/entry/{url_title}">
+         <a class="block" href="{route='blog/entry' url_title='{embed:url_title}'}">
             <h3 class="mt-2 text-xl leading-7 font-semibold text-gray-900">
                {embed:title}
             </h3>
