--- a/system/user/templates/default_site/embeds.group/blog-card.html
+++ b/system/user/templates/default_site/embeds.group/blog-card.html
@@ -18,7 +18,11 @@
       </div>
       <div class="mt-6 flex items-center">
          <div class="flex-shrink-0">
-            <a href="#"><img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=2&amp;w=256&amp;h=256&amp;q=80" alt=""></a></div>
+            <a href="#">
+                {if avatar}
+               <img class="h-10 w-10 rounded-full" src="{avatar_url}" alt="{author}'s avatar">
+               {/if}
+            </a></div>
          <div class="ml-3">
             <p class="text-sm leading-5 font-medium text-gray-900"><a class="hover:underline" href="#">{embed:author}</a></p>
             <div class="flex text-sm leading-5 text-gray-500">
